# luma-appointments-qa

./: .gitignore  README.md  TODO  docker-compose.yml  heroku.ai-service.yml  heroku.mcp-server.yml  heroku.ui-service.yml
apps/ai-service/: pyproject.toml
apps/ai-service/docker/: Dockerfile  Dockerfile.heroku
apps/ai-service/src/: app.py
apps/ai-service/src/ai/graph/: base.py  conversational_qa.py  qa.py
apps/ai-service/src/ai/graph/checkpointer/: postgres.py
apps/ai-service/src/ai/graph/models/: conversational_qa.py  qa.py
apps/ai-service/src/ai/graph/nodes/conversational_qa/: __init__.py  action_response.py  action_router.py  ask_confirmation.py  cancel_appointments.py  clarification.py  confirm_appointments.py  conversation_manager.py  list_appointments.py  process_confirmation.py  qa_anwser.py  verification_appointment.py  verification_gate.py  verification_patient.py
apps/ai-service/src/ai/graph/nodes/qa/: __init__.py  action_appointment.py  check_user_session.py  collect_user_info.py  invalid_input.py  menu_input.py  menu_output.py  process_input.py  query_identity.py  tracker.py  verification_failed.py  verify_identity.py
apps/ai-service/src/ai/graph/parser/: fix.py
apps/ai-service/src/ai/graph/prompts/builder/: __init__.py  message_types.py  prompt_builder.py
apps/ai-service/src/ai/graph/prompts/templates/: __init__.py  conversational_qa.py  qa.py
apps/ai-service/src/ai/graph/services/: llm.py
apps/ai-service/src/ai/graph/services/conversational_qa/: __init__.py  appointment_match.py  ask_confirmation.py  clarification.py  clarification_appointment.py  intent.py  process_confirmation.py  qa_answer.py  query_orm.py  verification.py
apps/ai-service/src/ai/graph/services/qa/: __init__.py  extraction.py  intent.py  query_orm.py  query_tool.py  response.py  validation.py
apps/ai-service/src/ai/graph/states/: conversational_qa.py  qa.py
apps/ai-service/src/ai/graph/types/: conversational_qa.py  qa.py
apps/ai-service/src/ai/mcp/: client.py
apps/ai-service/src/ai/mcp/tools/: __init__.py  factory.py  schema.py  tools.py  wrapper.py
apps/ai-service/src/ai/mcp/tools/parsers/: __init__.py  base.py  database.py  parser.py  todo.py
apps/ai-service/src/infrastructure/database/orm/: __init__.py  engine.py  reader.py  tables.py  writer.py
apps/ai-service/src/routers/: base.py  models.py  status.py
apps/ai-service/src/routers/chatbot/: __init__.py  chatbot.py
apps/ai-service/src/routers/health/: __init__.py  checker.py
apps/ai-service/src/services/: __init__.py
apps/ai-service/src/services/chatbot/: __init__.py  chatbot.py
apps/ai-service/src/services/upserter/: upsert.py
apps/ai-service/tests/: conftest.py
apps/ai-service/tests/ai/graph/: __init__.py
apps/ai-service/tests/ai/graph/services/: __init__.py  conftest.py  test_llm.py
apps/mcp-server/: README.md  pyproject.toml
apps/mcp-server/docker/: Dockerfile  Dockerfile.heroku
apps/mcp-server/src/: app.py
apps/mcp-server/src/server/: __init__.py  mcp_server.py
apps/mcp-server/src/services/: __init__.py  base.py  postgres.py  todo.py  todo_service.py
apps/mcp-server/src/services/prompts/: todo.py
apps/ui-service/: pyproject.toml
apps/ui-service/docker/: Dockerfile  Dockerfile.heroku
apps/ui-service/src/: app.py  constants.py
apps/ui-service/src/components/: styled_components.py  user_input_forms.py
apps/ui-service/src/core/: application.py
apps/ui-service/src/database/: connection.py  models.py
apps/ui-service/src/services/: chatbot_api.py
apps/ui-service/src/styles/: design_system.py
apps/ui-service/src/utils/file/: file_io.py  size_checker.py
apps/ui-service/src/utils/logger/: logger.py
apps/ui-service/src/utils/retries/: retries.py
apps/ui-service/src/utils/uuid_handler/: __init__.py  uuid_handler.py
(+27 files in other folders)
