[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "fastmcp>=2.12.4",
    "ipython>=9.5.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg2[binary]>=2.9.10",
    "psycopg[binary]>=3.2.10",
    "pytz>=2025.2",
    "uvicorn>=0.37.0",
]